feat(crous-menu): added crous command to query the menu